# CV-HW2

./: .gitignore  CMakeLists.txt  build.sh  cards.yaml  download_dataset.sh  find_classes.sh  preprocess_images.py  split_data.py  train.py
include/: card_detection.hpp  common.hpp  detect.hpp  preprocess.hpp  process.hpp  tinyxml2.hpp
report/: proposal.tex  references.bib
src/: card_detection.cpp  cv_detection.cpp  detect.cpp  inference.cpp  main.cpp  main2.cpp  main3.cpp  preprocess.cpp  process.cpp  tinyxml2.cpp
